Fixes:
    + Filters with the boolean data type were working incorrectly